--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.46.2",
-    "@typescript-eslint/parser": "^8.46.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/container-queries": "0.1.1",
     "autoprefixer": "^10.4.15",
@@ -38,8 +36,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
+    "lint": "eslint . --ext .js,.jsx",
+    "lint:fix": "eslint . --ext .js,.jsx --fix"
   },
   "browserslist": {
     "production": [
