--- a/package.json
+++ b/package.json
@@ -52,5 +52,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://fastapi-example-88qq.onrender.com"
 }
