adding wake up ping to back-end every time web page is visited

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
   "rewrites": [
-    {
-      "source": "/ask",
-      "destination": "https://fastapi-example-88qq.onrender.com/ask"
-    }
+    { "source": "/ask", "destination": "https://fastapi-example-88qq.onrender.com/ask" },
+    { "source": "/", "destination": "https://fastapi-example-88qq.onrender.com/" }
   ]
 }
-
