update assistant url

--- a/package.json
+++ b/package.json
@@ -53,5 +53,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://fastapi-example-88qq.onrender.com"
+  "proxy": "https://rag-portfolio-498n.onrender.com"
 }
