refact: updateing urls

--- a/package.json
+++ b/package.json
@@ -53,5 +53,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://rag-portfolio-498n.onrender.com"
+  "proxy": "https://joelchacon-rag-portfolio.hf.space"
 }
